--- a/contactme.html
+++ b/contactme.html
@@ -1,2 +1,2 @@
 <h2>This is the site to my social profiles</h2>
-<a href="https://instagram.com/dineshkandepu" target="blank">Instagram</a>
+<a href="https://instagram.com/dineshkandepu" target="_blank">Instagram</a>
