Dinesh gadi site

--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
 	<title>::Reactjsproject::</title>
 	<link rel="icon" type="favicon" href="image/image.svg">
+	
 
 </head>
 <body>
 	<h1> Welcome all </h1>
-	<h2> To my first page </h2>
-	<h6> Please submit the following information </h6>
+	<h2> To Dinesh World </h2>
+	<h3> The most desirable Man on Universe  </h6>
 	<p> I wanted to share my options on this page </p>
-	<span> button1 </span>
-	<span> button2 </span>
-	<img src="image/image.svg" width="200px">
-	<form>
+	
+	<img src="image/1.jpeg" width="200px">
+	<img src="image/2.jpeg" width="200px">
+	<img src="image/3.jpeg" width="200px">
+	<!-- <form>
 		<input type="text" placeholder="Name" required>
 		<input type="email" placeholder="Email" required>
 		<select>
@@ -22,8 +24,12 @@
 			<option> vijayawada </option>
 		</select>
 		<input type="submit" value="Register">
-	</form>
-
+	</form> -->
+	<h3>Contact me</h3>
+	<p>Mail id: dineshkandepu@srmap.edu.in</p>
+	<p>Click on my social platform icons available below</p>
+	<a href="https://instagram.com/dineshkandepu" target="_blank"><img src="image/5.jpg" alt="instagram" width="10%" height="10%"></a>
+	<a href="https://facebook.com/dinesh.kandepu.7" target="_blank"><img src="image/4.png" alt="facebook" width="10%" height="10%"></a>
 
 </body>
 </html>
