--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>::Reactjsproject::</title>
+	<title>Dinesh gadi site</title>
 	<link rel="icon" type="favicon" href="image/image.svg">
 	
 
