--- a/index.html
+++ b/index.html
@@ -1,35 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<title>Dinesh gadi site</title>
-	<link rel="icon" type="favicon" href="image/image.svg">
-	
-
+  <meta charset="UTF-8">
+  <title>CV - Ocat</title>
+  <meta name="description" content="simple CV example created with HTML and CSS">
+  <meta name="author" content="Pradheep">
+  <link rel="icon" href="./img/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<h1> Welcome all </h1>
-	<h2> To Dinesh World </h2>
-	<h3> The most desirable Man on Universe  </h6>
-	<p> I wanted to share my options on this page </p>
-	
-	<img src="image/1.jpeg" width="200px">
-	<img src="image/2.jpeg" width="200px">
-	<img src="image/3.jpeg" width="200px">
-	<!-- <form>
-		<input type="text" placeholder="Name" required>
-		<input type="email" placeholder="Email" required>
-		<select>
-			<option value="" selected disabled> Select an option </option>
-			<option value="one"> Guntur </option>
-			<option> vijayawada </option>
-		</select>
-		<input type="submit" value="Register">
-<<<<<<< HEAD
-	</form> -->
-	<h3>Contact me</h3>
-	<p>Mail id: dineshkandepu@srmap.edu.in</p>
-	<p>Click on my social platform icons available below</p>
-	<a href="https://instagram.com/dineshkandepu" target="_blank"><img src="image/5.jpg" alt="instagram" width="10%" height="10%"></a>
-	<a href="https://facebook.com/dinesh.kandepu.7" target="_blank"><img src="image/4.png" alt="facebook" width="10%" height="10%"></a>
+  <header>
+    <div>
+      <img src="./img/me.jpg" />
+    </div>
+    <h1>DODDI YAMINI DURGA PRADHEEP</h1>
+    <section>
+      <p>Hello! I am 2nd year ECE student in SRM University . I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment.</p>
+      <a href="https://www.facebook.com/yamini.durgapradeep" target="_blank">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://twitter.com/PradheepDYD" target="_blank">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="https://github.com/gitpradheep" target="_blank">
+        <i class="fab fa-github-alt"></i>
+      </a>
+      <a href="https://www.instagram.com/pradheep_d_y_d/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/pradheep-d-y-d-92484b17a/" target="_blank">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </section>
+  </header>
+  <main>
+    <section>
+      <h3>Courses & Workshops</h3>
+      <article class='course'>
+        <div class='title'>
+          <h4>Tata Steel: Fundamentals on PCB's</h4>
+        </div>
+        <div class="descrition">
+          <p>PLCs are intended for and therefore tolerant of more severe conditions (such as dust, moisture, heat and cold) while offering extensive input/output (I/O) to connect the PLC to sensors and actuators.</p>
+        </div>
+      </article>
+      <article class='course'>
+        <div class='title'>
+          <h4>Coursera: Crash Course on Python by Google</h4>
+        </div>
+        <div class="descrition">
+          <p>Understand what Python is and why Python is relevant to automation,Write short Python scripts to perform automated actions,Understand how to use the basic Python structures: strings, lists, and dictionaries,Create your own Python objects</p>
+        </div>
+      </article>
+      <article class='course'>
+        <div class='title'>
+          <h4>Coursera: Google Cloud Platform Fundamentals: Core Infrastructure</h4>
+        </div>
+        <div class="descrition">
+          <p>Google Compute Engine,Google Cloud Platform,Google App Engine (GAE),Cloud Computing</p>
+        </div>
+      </article>
+      <article class='course'>
+        <div class='title'>
+          <h4>Google: The Fundamental of Digital Marketing</h4>
+        </div>
+        <div class="descrition">
+          <p> The basics of digital marketing with Interactive Advertising Bureau-accredited course. There are 26 modules to explore, all created by Google trainers, packed full of practical exercises and real-world examples to helped me to turn knowledge into action.</p>
+        </div>
+      </article>
+      <article class='course'>
+        <div class='title'>
+          <h4>Game Development on Buildbox: 2-Day Workshops</h4>
+        </div>
+        <div class="descrition">
+          <p>Learned how to build intersting games on Buildbox software which is conducted by APSSDC.</p>
+        </div>
+      </article>
+    </section>
+    <section>
+      <h3>Skills</h3>
+      <div class='skills'>
+        <div class='column'>
+          <h4>Good knowledge</h4>
+          <ul>
+            <li>Python</li>
+            <li>MATLAB</li>
+            <li>LTSpice</li>
+            <li>C#(Programming Language)</li>
+            <li>DSP(Digital Signal Proccessing)</li>
+            <li>html</li>
+          </ul>
+        </div>
+        <div class='column'>
+          <h4>Basic knowledge</h4>
+          <ul>
+            <li>Google Cloud Platform(GCP)</li>
+            <li>ReactJS</li>
+            <li>PLC(Programmable Logic Controller)</li>
+            <li>Analog Electronic's</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Languages</h4>
+          <p>Telugu - Native speaker</p>
+          <p>English - Proficient</p>
+          <p>Hindi - Elementary</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h3>Education</h3>
+      <article>
+        <div class='school'>
+          <span>2018-2022</span> <strong>SRM University</strong>
+        </div>
+        <div class="descrition">
+          B.Tech-Electronics and Communications Engineering (ECE)
+        </div>
+      </article>
+      <article>
+        <div class='school'>
+          <span>2016-2018</span> <strong>Sri Chaitanya Junior College</strong>
+        </div>
+        <div>
+          MPC
+        </div>
+      </article>
+      <article>
+        <div class='school'>
+          <span>2010-2016</span> <strong>Ratnam high School</strong>
+        </div>
+        <div>
+          5-10th standard
+        </div>
+      </article>
+      <article>
+        <div class='school'>
+          <span>2010</span> <strong>Johnson Grammar School</strong>
+        </div>
+        <div>
+          LKG-4 standard
+        </div>
+      </article>
+    </section>
+    <section>
+      <h3>Experience</h3>
+      <article>
+        <div class='job-title'>
+          <span>04.2019 - 04.2019</span> <strong>hindustan coca-cola beverages pvt ltd</strong><br> <strong>Position:</strong> In-Plant Training
+        </div>
+        <div>
+          <p><strong>Tech stack:</strong> HTML5 / CSS / Python / C# / BuildBox / MATLAB / LTSpice</p>
+          <ul class="job-description">
+            <li>Develop web application </li>
+            <li>Implement UI (front-end site) based on received graphic design and requirements</li>
+            <li>Designing circuits on LTSpice</li>
+          </ul>
+        </div>
+      </article>
+    </section>
+  </main>
+  <footer>
+    <p>Created by: <a href="https://www.instagram.com/pradheep_d_y_d/">@pradheep_d_y_d</a>  / <a href="https://www.linkedin.com/in/pradheep-d-y-d-92484b17a/">LinkedIn</a> / 2020 </p>
+  </footer>
 </body>
 </html>
