--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
       <img src="./img/me.jpg" />
     </div>
-    <h1>DODDI YAMINI DURGA PRADHEEP</h1>
+    <h1>Doddi Yamini Durga Pradheep</h1>
     <section>
       <p>Hello! I am 2nd year ECE student in SRM University . I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment.</p>
       <a href="https://www.facebook.com/yamini.durgapradeep" target="_blank">
