--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>CV - Ocat</title>
+  <title>PradheepDYD</title>
   <meta name="description" content="simple CV example created with HTML and CSS">
   <meta name="author" content="Pradheep">
   <link rel="icon" href="./img/favicon.ico">
